Ajout de la partie des projets

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Robin, Simonneau, Robin Simonneau, web developer, developer, développeur">
     <meta name="author" content="Robin Simonneau">
     <title>Robin Simonneau</title>
+    <!--Designed by Brittany Chiang : https://github.com/bchiang7 -->
   </head>
   <body>
     <div id="root"></div>
